list articles, user update

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-mongodb://uagyiqg8ko4kbmcu1ysp:3mCx6DMX91CHzyMLvlgb@bttoyx6upt8x5qm-mongodb.services.clever-cloud.com:27017/bttoyx6upt8x5qm
+MONGOURI=mongodb://uagyiqg8ko4kbmcu1ysp:3mCx6DMX91CHzyMLvlgb@bttoyx6upt8x5qm-mongodb.services.clever-cloud.com:27017/bttoyx6upt8x5qm
+
+SECRET=altcampusprofileapp
